--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,10 @@ body {
   padding-block: 100px;
   position: relative;
 }
-
+.picture-about {
+  width: 100%;
+  height: 100%;
+}
 .picture.left::before {
   content: " ";
   background-color: #e5975f;
@@ -86,6 +89,7 @@ body {
   font-style: italic;
   width: 60%;
   font-size: 16px;
+  font-display: optional;
 }
 .about-me__text {
   width: 80%;
