--- a/assets/style.css
+++ b/assets/style.css
@@ -41,8 +41,12 @@ body {
 
 .social-link img {
   width: 20px;
+  height: 20px;
 }
-
+.carousel-img {
+  width: 100%;
+  height: 100%;
+}
 #about {
   display: flex;
   background-color: #f6d2b8;
